<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickAPI"
            android:text="@string/API">
        </Button>

        <Button
            android:id="@+id/btnGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickGPS"
            android:text="@string/GPS">
        </Button>

        <Button
            android:id="@+id/btnRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="onClickRandom"
            android:text="@string/Random">
        </Button>

        <Button
            android:id="@+id/btnEkb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="onClickEKB"
            android:text="@string/EKB">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:text="@string/GPS"/>

        <TextView
            android:id="@+id/textView_GPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/GPS"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:text="@string/network"/>

        <TextView
            android:id="@+id/textView_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network"/>
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/map"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.qegle.gmaptest.MapsActivity"/>
</LinearLayout>